--- a/index.html
+++ b/index.html
@@ -34,39 +34,87 @@
     </section>
 
     <section class = "learn">
-                <h1> Ceux que j'ai appris </h1>
+                <h1> Ce que j'ai appris </h1>
 
-                <div class = "icones">
-                    <img src="Icones/iconhtml.png" alt="HTML">
-                    <img src="Icones/iconcss.png" alt="CSS">
-                    <img src="Icones/iconjavascript.png" alt="JavaScript">
-                    <img src="Icones/iconphp.png" alt="PHP">
-                    <img src="Icones/iconpython.png" alt="Python">
-                    <img src="Icones/iconjava.png" alt="Java">
-                    <img src="Icones/iconmysql.png" alt="MySQL">
-                </div>
+    <div class="icones">
+        <div class="language-container">
+            <a href="https://developer.mozilla.org/fr/docs/Web/HTML" target="_blank">
+                <img src="Icones/iconhtml.png" alt="HTML">
+                <p>HTML</p>
+            </a>
+        </div>
+        <div class="language-container">
+            <a href="https://developer.mozilla.org/fr/docs/Web/CSS" target="_blank">
+                <img src="Icones/iconcss.png" alt="CSS">
+                <p>CSS</p>
+            </a>
+        </div>
+        <div class="language-container">
+            <a href="https://developer.mozilla.org/fr/docs/Web/JavaScript" target="_blank">
+                <img src="Icones/iconjavascript.png" alt="JavaScript">
+                <p>JavaScript</p>
+            </a>
+        </div>
+        <div class="language-container">
+            <a href="https://www.php.net" target="_blank">
+                <img src="Icones/iconphp.png" alt="PHP">
+                <p>PHP</p>
+            </a>
+        </div>
+        <div class="language-container">
+            <a href="https://www.python.org" target="_blank">
+                <img src="Icones/iconpython.png" alt="Python">
+                <p>Python</p>
+            </a>
+        </div>
+        <div class="language-container">
+            <a href="https://www.java.com/fr/" target="_blank">
+                <img src="Icones/iconjava.png" alt="Java">
+                <p>Java</p>
+            </a>
+        </div>
+        <div class="language-container">
+            <a href="https://www.mysql.com" target="_blank">
+                <img src="Icones/iconmysql.png" alt="MySQL">
+                <p>MySQL</p>
+            </a>
+        </div>
+    </div>
     </section>
 
     <section id="project" class="project">
         <h1>Mes projets</h1>
         <br/><br/><br/>
 
-        <div class="projets-grille"> <div class="projet-card">
-            <a href="Project/Uloyiko[Test]/Uloyiko.html">
-                <img src="Images/UloyikoPP.JPG" alt="Projet Uloyiko">
-            </a>
-            <h3>Uloyiko</h3>
-            <p>Site Marchands</p>
+        <div class="projets-grille">
+            <div class="projet-card">
+                <a href="Project/Uloyiko[Test]/Uloyiko.html">
+                    <img src="Images/UloyikoPP.JPG" alt="Projet Uloyiko">
+                </a>
+                <h3>Uloyiko</h3>
+                <p>
+                    Un site e-commerce élégant et fonctionnel, conçu pour une expérience d'achat fluide et intuitive. Ce projet a mis à l'épreuve mes compétences en intégration web et en design d'interface.
+                </p>
+                <div class="language-icons">
+                    <img src="Icones/iconhtml.png" alt="HTML">
+                    <img src="Icones/iconcss.png" alt="CSS">
+                    <img src="Icones/iconphp.png" alt="PHP">
+                </div>
             </div>
 
-        <div class="projet-card">
-            <a href="Veille/Seas.html">
-                <img src="Images/SeasPP.JPG" alt="Autre Projet">
-            </a>
-            <h3>Veille Technologique</h3>
-            <p>Veille sur les ressources mobilisées pour la découverte des fonds marins.</p>
-        </div>
-        
+            <div class="projet-card">
+                <a href="Veille/Seas.html">
+                    <img src="Images/SeasPP.JPG" alt="Veille Technologique sur les fonds marins">
+                </a>
+                <h3>Veille Technologique</h3>
+                <p>
+                    Une veille complète sur les technologies de pointe utilisées pour l'exploration des fonds marins. Ce projet démontre ma capacité à rechercher, analyser et synthétiser des informations complexes pour rester à jour sur les innovations techniques.
+                </p>
+                <div class="language-icons">
+                    <img src="Icones/iconhtml.png" alt="HTML">
+                    <img src="Icones/iconcss.png" alt="CSS">
+                </div>
+            </div>
         </div>
     </section>
 
