--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             <li><a href="#presentation">Home</a></li>
             <li><a href="#aboutme">À propos</a></li>
             <li><a href="#project">Projets</a></li>
+            <li><a href="#certification">Certification</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -79,6 +80,12 @@
                 <p>MySQL</p>
             </a>
         </div>
+        <div class="language-container">
+            <a href="https://www.lua.org/" target="_blank">
+                <img src="Icones/iconlua.jpg" alt="Lua">
+                <p>Lua</p>
+            </a>
+        </div>
     </div>
     </section>
 
@@ -88,7 +95,7 @@
 
         <div class="projets-grille">
             <div class="projet-card">
-                <a href="Project/Uloyiko[Test]/Uloyiko.html">
+                <a href="Project/Uloyiko[Test]/Uloyiko.html" target="_blank">
                     <img src="Images/UloyikoPP.JPG" alt="Projet Uloyiko">
                 </a>
                 <h3>Uloyiko</h3>
@@ -103,7 +110,7 @@
             </div>
 
             <div class="projet-card">
-                <a href="Veille/Seas.html">
+                <a href="Veille/Seas.html" target="_blank">
                     <img src="Images/SeasPP.JPG" alt="Veille Technologique sur les fonds marins">
                 </a>
                 <h3>Veille Technologique</h3>
@@ -116,6 +123,53 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <section id = "certification" class = "certification">
+
+        <h1>Mes Certifications</h1>
+
+        <div class="projets-grille">
+
+            <div class="projet-card">
+
+                <a href="Images/Introduction_to_Cybersecurity_Badge20250110-28-9j8it3.pdf" target="_blank">
+                    <img src="Images/CybersecurityPP.jpg" alt="CiscoCybersecurity">
+                </a>
+                <h3>Cisco Cybersecurity</h3>
+                <p>
+                    Introduction_to_Cybersecurity_Badge20250110-28-9j8it3
+                </p>
+
+            </div>
+
+            <div class="projet-card">
+
+                <a href="Images/Introduction_to_Cybersecurity_Badge20250110-28-9j8it3.pdf" target="_blank">
+                    <img src="Images/CybersecurityPP.JPG" alt="Projet Uloyiko">
+                </a>
+                <h3>N/A</h3>
+                <p>
+                    n/a
+                </p>
+
+            </div>
+
+            <div class="projet-card">
+
+                <a href="Images/Introduction_to_Cybersecurity_Badge20250110-28-9j8it3.pdf" target="_blank">
+                    <img src="Images/CybersecurityPP.JPG" alt="Projet Uloyiko">
+                </a>
+                <h3>N/A</h3>
+                <p>
+                    n/a
+                </p>
+
+            </div>
+        </div>
+        
+
+
     </section>
 
     <section id="contact">
