--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             <div class="projet-card">
 
                 <a href="Images/Introduction_to_Cybersecurity_Badge20250110-28-9j8it3.pdf" target="_blank">
-                    <img src="Images/CybersecurityPP.JPG" alt="Projet Uloyiko">
+                    <img src="Images/CybersecurityPP.jpg" alt="Certification">
                 </a>
                 <h3>N/A</h3>
                 <p>
@@ -158,7 +158,7 @@
             <div class="projet-card">
 
                 <a href="Images/Introduction_to_Cybersecurity_Badge20250110-28-9j8it3.pdf" target="_blank">
-                    <img src="Images/CybersecurityPP.JPG" alt="Projet Uloyiko">
+                    <img src="Images/CybersecurityPP.jpg" alt="Certification">
                 </a>
                 <h3>N/A</h3>
                 <p>
