--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </a>
                 <h3>Uloyiko</h3>
                 <p>
-                    Un site e-commerce élégant et fonctionnel, conçu pour une expérience d'achat fluide et intuitive. Ce projet a mis à l'épreuve mes compétences en intégration web et en design d'interface.
+                    Un site e-commerce élégant et fonctionnel, conçu pour une expérience d'achat fluide et intuitive. Ce projet a mis à l'épreuve mes compétences en intégration web et en design d'interface et en gestion de base de donnée.
                 </p>
                 <div class="language-icons">
                     <img src="Icones/iconhtml.png" alt="HTML">
@@ -179,3 +179,4 @@
 
 </body>
 </html>
+
