--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             J'ai actuellement 19 ans et je suis en deuxième année de BTS SIO, dans la branche développement.<br><br>
 
             Si j'ai choisi ce BTS, c'est parce que depuis petit, je me suis fasciné pour le développement de jeux vidéo,<br>
-            grâce à des plateformes où l'on pouvait jouer et créer en même temps.<br><br>
+            grâce à des plateformes où l'on pouvait jouer et développer en même temps.<br><br>
 
             Plus tard, j'ai aussi découvert le développement de logiciels.<br>
             Tous ces facteurs m'ont poussé à m'orienter vers ce choix.
@@ -179,4 +179,5 @@
 
 </body>
 </html>
+
 
