--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </a>
                 <h3>Uloyiko</h3>
                 <p>
-                    Un site e-commerce élégant et fonctionnel, conçu pour une expérience d'achat fluide et intuitive. Ce projet a mis à l'épreuve mes compétences en intégration web et en design d'interface et en gestion de base de donnée.
+                    Un site e-commerce élégant et fonctionnel, conçu pour une expérience d'achat fluide et intuitive. Ce projet a mis à l'épreuve mes compétences en intégration web et en design d'interface et en gestion de base de donnée.<br> Date : 2024
                 </p>
                 <div class="language-icons">
                     <img src="Icones/iconhtml.png" alt="HTML">
@@ -115,7 +115,7 @@
                 </a>
                 <h3>Veille Technologique</h3>
                 <p>
-                    Une veille complète sur les technologies de pointe utilisées pour l'exploration des fonds marins. Ce projet démontre ma capacité à rechercher, analyser et synthétiser des informations complexes pour rester à jour sur les innovations techniques.
+                    Une veille complète sur les technologies de pointe utilisées pour l'exploration des fonds marins. Ce projet démontre ma capacité à rechercher, analyser et synthétiser des informations complexes pour rester à jour sur les innovations techniques.<br> Date : 2024/2025
                 </p>
                 <div class="language-icons">
                     <img src="Icones/iconhtml.png" alt="HTML">
@@ -179,5 +179,6 @@
 
 </body>
 </html>
+
 
 
