--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
                 <h3>Uloyiko</h3>
                 <p>
                     Un site e-commerce élégant et fonctionnel, conçu pour une expérience d'achat fluide et intuitive. Ce projet a mis à l'épreuve mes compétences en intégration web et en design d'interface et en gestion de base de donnée.<br> Date : 2024
+                    <br> Travail effectué en groupe
                 </p>
                 <div class="language-icons">
                     <img src="Icones/iconhtml.png" alt="HTML">
@@ -116,6 +117,7 @@
                 <h3>Veille Technologique</h3>
                 <p>
                     Une veille complète sur les technologies de pointe utilisées pour l'exploration des fonds marins. Ce projet démontre ma capacité à rechercher, analyser et synthétiser des informations complexes pour rester à jour sur les innovations techniques.<br> Date : 2024/2025
+                    <br> Travail effectué tout seul
                 </p>
                 <div class="language-icons">
                     <img src="Icones/iconhtml.png" alt="HTML">
@@ -179,6 +181,7 @@
 
 </body>
 </html>
+
 
 
 
